# eight_bit_breadboard_computer

./: .gitignore  pyproject.toml
display_rom/: main.py
microcode/: main.py  microcode.toml
